<resources>
    <string name="app_name">Guess the Number</string>
    <string name="btn_start">Start game</string>
    <string name="btn_results">Results</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="game_start">Game started</string>
    <string name="name">Everinas Kazla IFK-7</string>
    <string name="game_ok">Guess</string>
    <string name="number_range_format">Guess a number in range %d to %d</string>
    <string name="turns_format">Turn %d of %d</string>
    <string name="result_format">Guessed number was %d, it was too %s</string>
    <string name="win_format">Wins: %d</string>
    <string name="loss_format">Losses: %d</string>
    <string name="outofrange_format">The number %d is out of range dummy!</string>
    <string name="result_high">high</string>
    <string name="result_low">low</string>
    <string-array name="dif_values">
        <item>Easy</item>
        <item>Impossible</item>
    </string-array>
</resources>
